--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -42,14 +42,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
-                android:id="@+id/loginText"
+                android:id="@+id/tvLogin"
                 android:textSize="30dp"
 
                 android:textStyle="bold"
                 android:textColor="@color/blue"/>
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/edtUsername"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
@@ -63,7 +63,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/password"
+                android:id="@+id/edtPassword"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
@@ -76,7 +76,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:id="@+id/loginButton"
+                android:id="@+id/btnLogin"
                 android:text="Đăng nhập"
                 android:textSize="18sp"
                 android:layout_marginTop="20dp"
@@ -85,7 +85,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:id="@+id/loginGoogleButton"
+                android:id="@+id/btnLoginGoogle"
                 android:text="Đăng nhập với Google"
                 android:backgroundTint="@color/gray"
                 android:textSize="18dp"
@@ -102,7 +102,7 @@
         android:text="Bạn chưa có tài khoản? Đăng kí ngay"
         android:textSize="14sp"
         android:textAlignment="center"
-        android:id="@+id/signupText"
+        android:id="@+id/tvRegister"
         android:textColor="@color/blue"
         android:layout_marginBottom="20dp"/>
 
