--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray">#808080</color>
     <color name="blue">#0154a0</color>
     <color name="clay">#ccdff1</color>
+    <color name="lightWhite">#F5F5F5</color>
 </resources>
