--- a/android/app/src/main/res/layout/activity_verify_otpactivity.xml
+++ b/android/app/src/main/res/layout/activity_verify_otpactivity.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,49 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.user.VerifyOTPActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="30dp"
+        android:gravity="center_horizontal"> <!-- Căn giữa ngang -->
+
+        <!-- Bố cục mới: ImageView bên trái, TextView giữa màn hình -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/icon_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/iconclose"
+                android:padding="5dp"
+                android:layout_alignParentStart="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_bold"
+                android:includeFontPadding="false"
+                android:text="@string/otp_code_text"
+                android:textAllCaps="true"
+                android:textColor="@color/black"
+                android:textSize="30dp"
+                android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/iconclose"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/logoute"
             android:padding="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:text = "@string/otp_verification_text"
             android:fontFamily="@font/roboto_bold"
-            android:includeFontPadding="false"
-            android:text="@string/otp_code_text"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="@color/black"
-            android:textSize="100dp"
-            android:gravity="center"
-            />
+            android:layout_marginTop="20dp"
+            android:textSize="20dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/roboto_bold"
-            android:includeFontPadding="false"
-            android:text="@string/otp_verification_text"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
         <TextView
             android:id="@+id/otp_description_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:fontFamily="@font/roboto_bold"
+            android:layout_marginTop="20dp"
             android:includeFontPadding="false"
             android:text="@string/otp_description_text"
             android:textAlignment="center"
@@ -58,11 +66,9 @@
         <com.chaos.view.PinView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:cursorVisible="true"
             android:inputType="number"
-
             app:cursorColor="@color/black"
             app:hideLineWhenFilled="false"
             app:itemCount="6"
@@ -76,11 +82,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/btnLogin"
-            android:text="Verifi Code"
+            android:text="Verify Code"
             android:textSize="18sp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/blue"
-            app:cornerRadius = "20dp"/>
+            app:cornerRadius="20dp"/>
 
     </LinearLayout>
 </ScrollView>
