--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
+        android:id="@+id/imgBackLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/iconback"
@@ -125,7 +126,7 @@
             android:text="Bạn đã có tài khoản? Đăng nhập ngay"
             android:textSize="14sp"
             android:textAlignment="center"
-            android:id="@+id/register_tvLogin"
+            android:id="@+id/register_tvBackLogin"
             android:textColor="@color/blue"
             android:layout_marginBottom="20dp"/>
 </LinearLayout>
