--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue">#0154a0</color>
     <color name="clay">#ccdff1</color>
     <color name="lightWhite">#F5F5F5</color>
+    <color name="darkBlue">#1e3254</color>
 </resources>
