--- a/android/app/src/main/res/layout/item_sub_category.xml
+++ b/android/app/src/main/res/layout/item_sub_category.xml
@@ -3,19 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/message" />
-
+    android:orientation="vertical">
     <TextView
         android:paddingStart="20dp"
-        android:id="@+id/tvCategory"
+        android:id="@+id/tvSubCategoryName"
         android:text="Category"
         android:layout_gravity="center_vertical"
         android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
 </LinearLayout>
