--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="clay">#ccdff1</color>
     <color name="lightWhite">#F5F5F5</color>
     <color name="darkBlue">#1e3254</color>
+    <color name="lavender">#8692f7</color>
 </resources>
