--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:padding="5dp"
         android:layout_alignParentTop="true"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
     android:id="@+id/register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
