--- a/android/app/src/main/res/layout/list_item.xml
+++ b/android/app/src/main/res/layout/list_item.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="12dp"
-    android:layout_marginEnd="12dp"
-    android:layout_marginVertical="10dp"
-    android:layout_marginHorizontal="10dp"
-    app:cardElevation="8dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <RelativeLayout
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <!-- Item nội dung -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="60dp"
+        android:padding="16dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
         <TextView
-            android:id="@+id/tv_newForm"
-            android:layout_width="120dp"
+            android:id="@+id/tvTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_centerVertical="true"
-            android:text="Name"
-            android:textColor="@color/lavender"
-            android:textSize="20sp" />
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <ImageView
-            android:id="@+id/img_next"
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/arrow"/>
-    </RelativeLayout>
+            android:src="@drawable/arrow"
+           />
+    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
