--- a/android/app/src/main/res/layout/activity_edit_user.xml
+++ b/android/app/src/main/res/layout/activity_edit_user.xml
@@ -1,17 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@android:color/white">
 
+    <View
+        android:layout_width="40dp"
+        android:layout_height="4dp"
+        android:background="@android:color/darker_gray"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingBottom="16dp">
+
         <ImageView
             android:id="@+id/img_User"
             android:layout_width="80dp"
@@ -19,6 +27,7 @@
             android:src="@drawable/user_2"
             android:scaleType="centerCrop"
             android:background="@drawable/circle_border"/>
+
         <TextView
             android:id="@+id/tv_Fullname"
             android:text="Nghĩa Trần"
@@ -40,6 +49,6 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/listview_border"
-        />
+        android:background="@drawable/listview_border"/>
+
 </LinearLayout>
