--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
-        android:id="@+id/itemProfile"
-        android:icon="@drawable/person"
-        android:title="Profile"/>
+        android:id="@+id/itemCategory"
+        android:title="Category"
+        android:icon="@drawable/category"/>
     <item
         android:id="@+id/itemHome"
         android:title="Home"
@@ -12,4 +13,9 @@
         android:id="@+id/itemNotification"
         android:title="Notification"
         android:icon="@drawable/notification"/>
+    <item
+        android:id="@+id/itemProfile"
+        android:icon="@drawable/person"
+        android:title="Profile"/>
+
 </menu>
