--- a/android/app/src/main/res/drawable/rounded_bg_selected.xml
+++ b/android/app/src/main/res/drawable/rounded_bg_selected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="5dp"/>  <!-- Bo tròn góc -->
-    <solid android:color="@color/white"/>  <!-- Màu nền -->
-    <stroke android:width="5dp" android:color="#085490"/>  <!-- Viền -->
+    <corners android:radius="10dp"/>  <!-- Bo tròn góc -->
+    <solid android:color="#eaebeb"/>  <!-- Màu nền -->
+    <stroke android:width="2dp" android:color="#085490"/>  <!-- Viền -->
 </shape>
