--- a/android/app/src/main/res/layout/item_category.xml
+++ b/android/app/src/main/res/layout/item_category.xml
@@ -9,6 +9,8 @@
         android:id="@+id/linearCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:padding="10dp"
         android:background="@drawable/rounded_bg">
         <ImageView
@@ -24,7 +26,7 @@
             android:fontFamily="@font/roboto_bold"
             android:paddingStart="20dp"
             android:text="Category"
-            android:textColor="@color/white"
+            android:textColor="#22497c"
             android:textSize="30sp" />
     </LinearLayout>
 
