--- a/android/app/src/main/res/layout/item_topic.xml
+++ b/android/app/src/main/res/layout/item_topic.xml
@@ -82,6 +82,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/btnLike"
                     android:src="@drawable/love_unclick"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
